SharpLua/Parser/Parser.cs
using System;
using System.Collections.Generic;
using System.Text;

using SharpLua.AST;

namespace SharpLua.Parser
{
    public partial class Parser
    {
        public Chunk ParseChunk(ParserInput<char> input, out bool success)
        {
            this.SetInput(input);
            Chunk chunk = ParseChunk(out success);
            if (this.Position < input.Length)
            {
                success = false;
                Error("Failed to parse remained input.");
            }
            return chunk;
        }

        private Chunk ParseChunk(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "Chunk");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as Chunk;
            }

            int errorCount = Errors.Count;
            Chunk chunk = new Chunk();
            int start_position = position;

            ParseSpOpt(out success);

            while (true)
            {
                while (true)
                {
                    int seq_start_position1 = position;
                    Statement statement = ParseStatement(out success);
                    if (success) { chunk.Statements.Add(statement); }
                    else { break; }

                    while (true)
                    {
                        int seq_start_position2 = position;
                        MatchTerminal(';', out success);
                        if (!success) { break; }

                        ParseSpOpt(out success);
                        break;
                    }
                    success = true;
                    break;
                }
                if (!success) { break; }
            }
            success = true;

            ParsingResults[reskey] = new Tuple<object, bool, int>(chunk, success, position);
            return chunk;
        }

        private Statement ParseStatement(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "Statement");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as Statement;
            }

            int errorCount = Errors.Count;
            Statement statement = null;

            statement = ParseAssignment(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            statement = ParseFunction(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            statement = ParseLocalVar(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            statement = ParseLocalFunc(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            statement = ParseReturnStmt(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            statement = ParseBreakStmt(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            statement = ParseDoStmt(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            statement = ParseIfStmt(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            statement = ParseForStmt(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            statement = ParseForInStmt(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            statement = ParseWhileStmt(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            statement = ParseRepeatStmt(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            statement = ParseExprStmt(out success);
            if (success) { ClearError(errorCount); ParsingResults[reskey] = new Tuple<object, bool, int>(statement, success, position);return statement; }

            return statement;
        }

        private Assignment ParseAssignment(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "Assignment");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as Assignment;
            }

            int errorCount = Errors.Count;
            Assignment assignment = new Assignment();
            int start_position = position;

            assignment.VarList = ParseVarList(out success);
            if (!success)
            {
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(assignment, success, position);return assignment;
            }

            ParseSpOpt(out success);

            MatchTerminal('=', out success);
            if (!success)
            {
                Error("Failed to parse '=' of Assignment.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(assignment, success, position);return assignment;
            }

            ParseSpOpt(out success);

            assignment.ExprList = ParseExprList(out success);
            if (!success)
            {
                Error("Failed to parse ExprList of Assignment.");
                position = start_position;
            }

            if (success) { ClearError(errorCount); }
            ParsingResults[reskey] = new Tuple<object, bool, int>(assignment, success, position);
            return assignment;
        }

        private Function ParseFunction(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "Function");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as Function;
            }

            int errorCount = Errors.Count;
            Function function = new Function();
            int start_position = position;

            MatchTerminalString("function", out success);
            if (!success)
            {
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(function, success, position);return function;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of Function.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(function, success, position);return function;
            }

            function.Name = ParseFunctionName(out success);
            if (!success)
            {
                Error("Failed to parse Name of Function.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(function, success, position);return function;
            }

            ParseSpOpt(out success);

            function.Body = ParseFunctionBody(out success);
            if (!success)
            {
                Error("Failed to parse Body of Function.");
                position = start_position;
            }

            if (success) { ClearError(errorCount); }
            ParsingResults[reskey] = new Tuple<object, bool, int>(function, success, position);
            return function;
        }

        private LocalVar ParseLocalVar(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "LocalVar");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as LocalVar;
            }

            int errorCount = Errors.Count;
            LocalVar localVar = new LocalVar();
            int start_position = position;

            MatchTerminalString("local", out success);
            if (!success)
            {
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(localVar, success, position);return localVar;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of LocalVar.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(localVar, success, position);return localVar;
            }

            localVar.NameList = ParseNameList(out success);
            if (!success)
            {
                Error("Failed to parse NameList of LocalVar.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(localVar, success, position);return localVar;
            }

            ParseSpOpt(out success);

            while (true)
            {
                int seq_start_position1 = position;
                MatchTerminal('=', out success);
                if (!success) { break; }

                ParseSpOpt(out success);

                localVar.ExprList = ParseExprList(out success);
                if (!success)
                {
                    Error("Failed to parse ExprList of LocalVar.");
                    position = seq_start_position1;
                }
                break;
            }
            success = true;

            ParsingResults[reskey] = new Tuple<object, bool, int>(localVar, success, position);
            return localVar;
        }

        private LocalFunc ParseLocalFunc(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "LocalFunc");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as LocalFunc;
            }

            int errorCount = Errors.Count;
            LocalFunc localFunc = new LocalFunc();
            int start_position = position;

            MatchTerminalString("local", out success);
            if (!success)
            {
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(localFunc, success, position);return localFunc;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of LocalFunc.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(localFunc, success, position);return localFunc;
            }

            MatchTerminalString("function", out success);
            if (!success)
            {
                Error("Failed to parse 'function' of LocalFunc.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(localFunc, success, position);return localFunc;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of LocalFunc.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(localFunc, success, position);return localFunc;
            }

            localFunc.Name = ParseName(out success);
            if (!success)
            {
                Error("Failed to parse Name of LocalFunc.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(localFunc, success, position);return localFunc;
            }

            ParseSpOpt(out success);

            localFunc.Body = ParseFunctionBody(out success);
            if (!success)
            {
                Error("Failed to parse Body of LocalFunc.");
                position = start_position;
            }

            if (success) { ClearError(errorCount); }
            ParsingResults[reskey] = new Tuple<object, bool, int>(localFunc, success, position);
            return localFunc;
        }

        private ExprStmt ParseExprStmt(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "ExprStmt");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as ExprStmt;
            }

            int errorCount = Errors.Count;
            ExprStmt exprStmt = new ExprStmt();

            exprStmt.Expr = ParseExpr(out success);
            if (success) { ClearError(errorCount); }
            else { Error("Failed to parse Expr of ExprStmt."); }
            ParsingResults[reskey] = new Tuple<object, bool, int>(exprStmt, success, position);
            return exprStmt;
        }

        private ReturnStmt ParseReturnStmt(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "ReturnStmt");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as ReturnStmt;
            }

            int errorCount = Errors.Count;
            ReturnStmt returnStmt = new ReturnStmt();
            int start_position = position;

            MatchTerminalString("return", out success);
            if (!success)
            {
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(returnStmt, success, position);return returnStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of ReturnStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(returnStmt, success, position);return returnStmt;
            }

            returnStmt.ExprList = ParseExprList(out success);
            success = true;

            ParsingResults[reskey] = new Tuple<object, bool, int>(returnStmt, success, position);
            return returnStmt;
        }

        private BreakStmt ParseBreakStmt(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "BreakStmt");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as BreakStmt;
            }

            int errorCount = Errors.Count;
            BreakStmt breakStmt = new BreakStmt();
            int start_position = position;

            MatchTerminalString("break", out success);
            if (!success)
            {
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(breakStmt, success, position);return breakStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of BreakStmt.");
                position = start_position;
            }

            if (success) { ClearError(errorCount); }
            ParsingResults[reskey] = new Tuple<object, bool, int>(breakStmt, success, position);
            return breakStmt;
        }

        private DoStmt ParseDoStmt(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "DoStmt");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as DoStmt;
            }

            int errorCount = Errors.Count;
            DoStmt doStmt = new DoStmt();
            int start_position = position;

            MatchTerminalString("do", out success);
            if (!success)
            {
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(doStmt, success, position);return doStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of DoStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(doStmt, success, position);return doStmt;
            }

            doStmt.Body = ParseChunk(out success);
            if (!success)
            {
                Error("Failed to parse Body of DoStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(doStmt, success, position);return doStmt;
            }

            MatchTerminalString("end", out success);
            if (!success)
            {
                Error("Failed to parse 'end' of DoStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(doStmt, success, position);return doStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of DoStmt.");
                position = start_position;
            }

            if (success) { ClearError(errorCount); }
            ParsingResults[reskey] = new Tuple<object, bool, int>(doStmt, success, position);
            return doStmt;
        }

        private IfStmt ParseIfStmt(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "IfStmt");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as IfStmt;
            }

            int errorCount = Errors.Count;
            IfStmt ifStmt = new IfStmt();
            int start_position = position;

            MatchTerminalString("if", out success);
            if (!success)
            {
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(ifStmt, success, position);return ifStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of IfStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(ifStmt, success, position);return ifStmt;
            }

            ifStmt.Condition = ParseExpr(out success);
            if (!success)
            {
                Error("Failed to parse Condition of IfStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(ifStmt, success, position);return ifStmt;
            }

            MatchTerminalString("then", out success);
            if (!success)
            {
                Error("Failed to parse 'then' of IfStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(ifStmt, success, position);return ifStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of IfStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(ifStmt, success, position);return ifStmt;
            }

            ifStmt.ThenBlock = ParseChunk(out success);
            if (!success)
            {
                Error("Failed to parse ThenBlock of IfStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(ifStmt, success, position);return ifStmt;
            }

            while (true)
            {
                ElseifBlock elseifBlock = ParseElseifBlock(out success);
                if (success) { ifStmt.ElseifBlocks.Add(elseifBlock); }
                else { break; }
            }
            success = true;

            while (true)
            {
                int seq_start_position1 = position;
                MatchTerminalString("else", out success);
                if (!success) { break; }

                ParseSpReq(out success);
                if (!success)
                {
                    Error("Failed to parse SpReq of IfStmt.");
                    position = seq_start_position1;
                    break;
                }

                ifStmt.ElseBlock = ParseChunk(out success);
                if (!success)
                {
                    Error("Failed to parse ElseBlock of IfStmt.");
                    position = seq_start_position1;
                }
                break;
            }
            success = true;

            MatchTerminalString("end", out success);
            if (!success)
            {
                Error("Failed to parse 'end' of IfStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(ifStmt, success, position);return ifStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of IfStmt.");
                position = start_position;
            }

            if (success) { ClearError(errorCount); }
            ParsingResults[reskey] = new Tuple<object, bool, int>(ifStmt, success, position);
            return ifStmt;
        }

        private ElseifBlock ParseElseifBlock(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "ElseifBlock");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as ElseifBlock;
            }

            int errorCount = Errors.Count;
            ElseifBlock elseifBlock = new ElseifBlock();
            int start_position = position;

            MatchTerminalString("elseif", out success);
            if (!success)
            {
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(elseifBlock, success, position);return elseifBlock;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of ElseifBlock.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(elseifBlock, success, position);return elseifBlock;
            }

            elseifBlock.Condition = ParseExpr(out success);
            if (!success)
            {
                Error("Failed to parse Condition of ElseifBlock.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(elseifBlock, success, position);return elseifBlock;
            }

            MatchTerminalString("then", out success);
            if (!success)
            {
                Error("Failed to parse 'then' of ElseifBlock.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(elseifBlock, success, position);return elseifBlock;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of ElseifBlock.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(elseifBlock, success, position);return elseifBlock;
            }

            elseifBlock.ThenBlock = ParseChunk(out success);
            if (!success)
            {
                Error("Failed to parse ThenBlock of ElseifBlock.");
                position = start_position;
            }

            if (success) { ClearError(errorCount); }
            ParsingResults[reskey] = new Tuple<object, bool, int>(elseifBlock, success, position);
            return elseifBlock;
        }

        private ForStmt ParseForStmt(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "ForStmt");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as ForStmt;
            }

            int errorCount = Errors.Count;
            ForStmt forStmt = new ForStmt();
            int start_position = position;

            MatchTerminalString("for", out success);
            if (!success)
            {
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forStmt, success, position);return forStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of ForStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forStmt, success, position);return forStmt;
            }

            forStmt.VarName = ParseName(out success);
            if (!success)
            {
                Error("Failed to parse VarName of ForStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forStmt, success, position);return forStmt;
            }

            ParseSpOpt(out success);

            MatchTerminal('=', out success);
            if (!success)
            {
                Error("Failed to parse '=' of ForStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forStmt, success, position);return forStmt;
            }

            ParseSpOpt(out success);

            forStmt.Start = ParseExpr(out success);
            if (!success)
            {
                Error("Failed to parse Start of ForStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forStmt, success, position);return forStmt;
            }

            MatchTerminal(',', out success);
            if (!success)
            {
                Error("Failed to parse ',' of ForStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forStmt, success, position);return forStmt;
            }

            ParseSpOpt(out success);

            forStmt.End = ParseExpr(out success);
            if (!success)
            {
                Error("Failed to parse End of ForStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forStmt, success, position);return forStmt;
            }

            while (true)
            {
                int seq_start_position1 = position;
                MatchTerminal(',', out success);
                if (!success) { break; }

                ParseSpOpt(out success);

                forStmt.Step = ParseExpr(out success);
                if (!success)
                {
                    Error("Failed to parse Step of ForStmt.");
                    position = seq_start_position1;
                }
                break;
            }
            success = true;

            MatchTerminalString("do", out success);
            if (!success)
            {
                Error("Failed to parse 'do' of ForStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forStmt, success, position);return forStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of ForStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forStmt, success, position);return forStmt;
            }

            forStmt.Body = ParseChunk(out success);
            if (!success)
            {
                Error("Failed to parse Body of ForStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forStmt, success, position);return forStmt;
            }

            MatchTerminalString("end", out success);
            if (!success)
            {
                Error("Failed to parse 'end' of ForStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forStmt, success, position);return forStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of ForStmt.");
                position = start_position;
            }

            if (success) { ClearError(errorCount); }
            ParsingResults[reskey] = new Tuple<object, bool, int>(forStmt, success, position);
            return forStmt;
        }

        private ForInStmt ParseForInStmt(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "ForInStmt");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as ForInStmt;
            }

            int errorCount = Errors.Count;
            ForInStmt forInStmt = new ForInStmt();
            int start_position = position;

            MatchTerminalString("for", out success);
            if (!success)
            {
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forInStmt, success, position);return forInStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of ForInStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forInStmt, success, position);return forInStmt;
            }

            forInStmt.NameList = ParseNameList(out success);
            if (!success)
            {
                Error("Failed to parse NameList of ForInStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forInStmt, success, position);return forInStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of ForInStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forInStmt, success, position);return forInStmt;
            }

            MatchTerminalString("in", out success);
            if (!success)
            {
                Error("Failed to parse 'in' of ForInStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forInStmt, success, position);return forInStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of ForInStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forInStmt, success, position);return forInStmt;
            }

            forInStmt.ExprList = ParseExprList(out success);
            if (!success)
            {
                Error("Failed to parse ExprList of ForInStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forInStmt, success, position);return forInStmt;
            }

            MatchTerminalString("do", out success);
            if (!success)
            {
                Error("Failed to parse 'do' of ForInStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forInStmt, success, position);return forInStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of ForInStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forInStmt, success, position);return forInStmt;
            }

            forInStmt.Body = ParseChunk(out success);
            if (!success)
            {
                Error("Failed to parse Body of ForInStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forInStmt, success, position);return forInStmt;
            }

            MatchTerminalString("end", out success);
            if (!success)
            {
                Error("Failed to parse 'end' of ForInStmt.");
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(forInStmt, success, position);return forInStmt;
            }

            ParseSpReq(out success);
            if (!success)
            {
                Error("Failed to parse SpReq of ForInStmt.");
                position = start_position;
            }

            if (success) { ClearError(errorCount); }
            ParsingResults[reskey] = new Tuple<object, bool, int>(forInStmt, success, position);
            return forInStmt;
        }

        private WhileStmt ParseWhileStmt(out bool success)
        {
            var reskey = new Tuple<int, string>(position, "WhileStmt");
            if (ParsingResults.ContainsKey(reskey))
            {
                var parsingResult = ParsingResults[reskey];
                success = parsingResult.Item2;
                position = parsingResult.Item3;
                return parsingResult.Item1 as WhileStmt;
            }

            int errorCount = Errors.Count;
            WhileStmt whileStmt = new WhileStmt();
            int start_position = position;

            MatchTerminalString("while", out success);
            if (!success)
            {
                position = start_position;
                ParsingResults[reskey] = new Tuple<object, bool, int>(whileStmt, success, position);return whileStmt;
            }
